# summer-of-bitcoin-2026

./: .gitignore  APPROACH.md  Cargo.toml  README.md  cli.sh  demo.md  setup.sh
2026-developer-challenge-1-chain-lens-pradhyum6144/: web.sh
2026-developer-challenge-1-chain-lens-pradhyum6144/src/: index.html
2026-developer-challenge-2-coin-smith-pradhyum6144/: .gitignore  README.md  demo.md  grade.sh  web.sh
2026-developer-challenge-2-coin-smith-pradhyum6144/fixtures/: basic_change_p2wpkh.json  hidden_change_p2tr.json  hidden_duplicate_payment_addresses.json  hidden_high_fee_absolute.json  locktime_block_height.json  locktime_boundary_block.json  locktime_boundary_timestamp.json  locktime_unix_timestamp.json  mixed_input_types.json  multi_input_required.json  (+8 more)
2026-developer-challenge-3-sherlock-pradhyum6144/: Cargo.toml  demo.md  grade.sh  web.sh
fixtures/: anti_fee_sniping.json  hidden_all_p2tr.json  hidden_change_becomes_dust.json  hidden_dust_boundary_546.json  hidden_exact_match_no_change.json  hidden_high_fee_rate.json  hidden_max_inputs_1.json  hidden_rbf_locktime_timestamp.json  hidden_rbf_no_locktime_no_height.json  large_mixed_script_types.json  large_utxo_pool.json  locktime_no_rbf.json  many_inputs_many_outputs.json  many_payments.json  prefer_taproot_input.json  rbf_basic.json  rbf_multi_input.json
grader/: grade_analysis.sh  grade_reports.sh
src/: analysis.rs  analyzer.rs  block.rs  coin_selection.rs  fixture.rs  index.html  lib.rs  main.rs  output.rs  parser.rs  privacy.rs  report.rs  script.rs  signer.rs  types.rs  web.rs
tests/: unit_tests.rs
(+49 files in other folders)
