[package]
name = "coin-smith"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "coin-smith"
path = "src/main.rs"

[[bin]]
name = "coin-smith-web"
path = "src/web.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitcoin = { version = "0.32", features = ["serde", "base64"] }
base64 = "0.22"
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
